--- a/login-register.html
+++ b/login-register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/x-icon">
     <title>UNIQLO e-Commerce</title>
     <!-- CSS Style link -->
     <link rel="stylesheet" href="common.css">
