code optimized add img link to product details page

--- a/checkout.html
+++ b/checkout.html
@@ -46,7 +46,6 @@
                 <!-- nav menu for desktop  -->
                 <div class="col-lg-6 d-none d-lg-block">
                     <ul class="nav-link">
-                        <li><a href="/">Home</a></li>
                         <li><a href="/">Shop</a></li>
                         <li><a href="/About.html">About</a></li>
                         <li><a href="/blog.html">Blog</a></li>
@@ -111,7 +110,6 @@
                     <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
                       <!-- nav menu for mobile device -->
                         <ul class="toggle-nav d-none">
-                            <li><a href="/">Home</a></li>
                             <li><a href="/">Shop</a></li>
                             <li><a href="/About.html">About</a></li>
                             <li><a href="/blog.html">Blog</a></li>
@@ -126,8 +124,8 @@
     -------header area end--------->
 
     <!------------------------------
-    ---contact heading area star--->
-    <section class="checkout" id="section-1>
+    ---checkout heading area star--->
+    <section class="checkout" id="section-1">
       <div class="img-div">
         <img src="/images/bg.webp" alt="" />
         <div class="info-div">
@@ -135,16 +133,16 @@
           <div>
             <a href="/">Home</a>
             <span>/</span>
-            <a href="/contact.html">Checkout</a>
+            <a href="/checkout.html">Checkout</a>
           </div>
         </div>
       </div>
     </section>
     <!------------------------------
-    ----contact heading area end--->
+    ----checkout heading area end--->
 
     <!------------------------------
-    --------checkout  end---------->
+    ------checkout form start------->
     <section class="checkout-section">
       <div class="container">
         <div class="row flex-row-reverse align-items-start">
@@ -314,7 +312,7 @@
       </div>
     </section>
     <!------------------------------
-    --------checkout  end---------->
+    ------checkout form end-------->
 
     <!------------------------------
     ------footer area start-------->
