--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 <!-- nav menu for desktop  -->
                 <div class="col-lg-6 d-none d-lg-block">
                     <ul class="nav-link">
-                        <li><a href="/">Home</a></li>
                         <li><a href="/">Shop</a></li>
                         <li><a href="/About.html">About</a></li>
                         <li><a href="/blog.html">Blog</a></li>
@@ -111,7 +110,6 @@
                     <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
                       <!-- nav menu for mobile device -->
                         <ul class="toggle-nav d-none">
-                            <li><a href="/">Home</a></li>
                             <li><a href="/">Shop</a></li>
                             <li><a href="/About.html">About</a></li>
                             <li><a href="/blog.html">Blog</a></li>
@@ -356,16 +354,21 @@
       <div class="container">
         <div class="row list">
           <div class="card col-12 col-md-4 col-lg-3 electronics">
+            
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-1.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Simple Black Clock</h5>
+              <a href="/product-details.html">
+                <h5>Simple Black Clock</h5>
+              </a>
               <ul>
                 <li class="old-price">$16.00</li>
                 <li class="new-price">$12.00</li>
@@ -378,15 +381,17 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-19.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Cat House</h5>
+              <a href="/product-details.html"><h5>Cat House</h5></a>
               <ul>
                 <li class="old-price">$33.00</li>
                 <li class="new-price">$30.00</li>
@@ -398,15 +403,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 kitchen">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-11.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>wooden bowl</h5>
+              <a href="/product-details.html">
+                <h5>wooden bowl</h5>
+              </a>
               <ul>
                 <li class="old-price">$10.00</li>
                 <li class="new-price">$7.00</li>
@@ -418,15 +427,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 electronics">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-5.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>LED Socket</h5>
+              <a href="/product-details.html">
+                <h5>LED Socket</h5>
+              </a>
               <ul>
                 <li class="old-price">$26.00</li>
                 <li class="new-price">$22.00</li>
@@ -438,15 +451,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-22.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Rocking Chair</h5>
+              <a href="/product-details.html">
+                <h5>Rocking Chair</h5>
+              </a>
               <ul>
                 <li class="old-price">$116.00</li>
                 <li class="new-price">$100.00</li>
@@ -458,15 +475,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-40.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Blue Diamond Air Ring</h5>
+              <a href="/product-details.html">
+                <h5>Blue Diamond Air Ring</h5>
+              </a>
               <ul>
                 <li class="old-price">$216.00</li>
                 <li class="new-price">$202.00</li>
@@ -478,15 +499,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-20.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Armchair and footrest</h5>
+              <a href="/product-details.html">
+                <h5>Armchair and footrest</h5>
+              </a>
               <ul>
                 <li class="old-price">$78.00</li>
                 <li class="new-price">$60.00</li>
@@ -498,15 +523,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 electronics">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-10.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Otto Fan</h5>
+              <a href="/product-details.html">
+                <h5>Otto Fan</h5>
+              </a>
               <ul>
                 <li class="old-price">$199.00</li>
                 <li class="new-price">$189.00</li>
@@ -518,15 +547,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-31.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Modern Leisure Outdoor</h5>
+              <a href="/product-details.html">
+                <h5>Modern Leisure Outdoor</h5>
+              </a>
               <ul>
                 <li class="old-price">$160.00</li>
                 <li class="new-price">$120.00</li>
@@ -538,15 +571,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-39.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Divine Mercy Saint</h5>
+              <a href="/product-details.html">
+                <h5>Divine Mercy Saint</h5>
+              </a>
               <ul>
                 <li class="old-price">$1006.00</li>
                 <li class="new-price">$992.00</li>
@@ -558,15 +595,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 kitchen">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-16.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Pink Tea Kettles</h5>
+              <a href="/product-details.html">
+                <h5>Pink Tea Kettles</h5>
+              </a>
               <ul>
                 <li class="old-price">$16.00</li>
                 <li class="new-price">$12.00</li>
@@ -578,15 +619,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-42.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Diamond Ring</h5>
+              <a href="/product-details.html">
+                <h5>Diamond Ring</h5>
+              </a>
               <ul>
                 <li class="old-price">$916.00</li>
                 <li class="new-price">$812.00</li>
@@ -598,15 +643,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 furniture">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-25.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Dining Table Set</h5>
+              <a href="/product-details.html">
+                <h5>Dining Table Set</h5>
+              </a>
               <ul>
                 <li class="old-price">$1316.00</li>
                 <li class="new-price">$1222.00</li>
@@ -618,15 +667,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 bag">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-9.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Alod bag for Men</h5>
+              <a href="/product-details.html">
+                <h5>Alod bag for Men</h5>
+              </a>
               <ul>
                 <li class="old-price">$114.00</li>
                 <li class="new-price">$102.00</li>
@@ -638,15 +691,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 bag">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-8.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Bamboo Cane</h5>
+              <a href="/product-details.html">
+                <h5>Bamboo Cane</h5>
+              </a>
               <ul>
                 <li class="old-price">$16.00</li>
                 <li class="new-price">$12.00</li>
@@ -658,15 +715,19 @@
           </div>
           <div class="card col-12 col-md-4 col-lg-3 jewellery">
             <div class="card-img">
-              <img
+              <a href="/product-details.html">
+                <img
                 class="card-img-top"
                 src="/images/product-37.webp"
                 alt="product"
               />
+              </a>
               <i class="icon fa-regular fa-heart"></i>
             </div>
             <div class="card-details">
-              <h5>Gemstone Necklaces</h5>
+              <a href="/product-details.html">
+                <h5>Gemstone Necklaces</h5>
+              </a>
               <ul>
                 <li class="old-price">$106.00</li>
                 <li class="new-price">$100.00</li>
