--- a/product-details.html
+++ b/product-details.html
@@ -45,7 +45,6 @@
                 <!-- nav menu for desktop  -->
                 <div class="col-lg-6 d-none d-lg-block">
                     <ul class="nav-link">
-                        <li><a href="/">Home</a></li>
                         <li><a href="/">Shop</a></li>
                         <li><a href="/About.html">About</a></li>
                         <li><a href="/blog.html">Blog</a></li>
@@ -110,7 +109,6 @@
                     <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
                       <!-- nav menu for mobile device -->
                         <ul class="toggle-nav d-none">
-                            <li><a href="/">Home</a></li>
                             <li><a href="/">Shop</a></li>
                             <li><a href="/About.html">About</a></li>
                             <li><a href="/blog.html">Blog</a></li>
@@ -130,11 +128,11 @@
       <div class="img-div">
         <img src="/images/bg.webp" alt="" />
         <div class="info-div">
-          <h2>Checkout</h2>
+          <h2>Product details</h2>
           <div>
             <a href="/">Home</a>
             <span>/</span>
-            <a href="/contact.html">Checkout</a>
+            <a href="/product-details.html">Product details</a>
           </div>
         </div>
       </div>
