--- a/login-register.html
+++ b/login-register.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="/images/favicon-16x16.png"
+      type="image/x-icon"
+    />
     <title>UNIQLO e-Commerce</title>
     <!-- CSS Style link -->
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="common.css" />
     <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="login-register.css" />
     <!-- Google Font Poppins -->
@@ -37,88 +41,85 @@
     <!------------------------------
     -------header area start------->
     <header>
-        <nav>
-            <div class="row justify-content-between align-items-center">
-                <!-- header logo  -->
-                <div class="col-4 col-lg-3">
-                    <a href="/"><img src="/images/uniqlo-logo.webp" alt="" /></a>
+      <nav>
+        <div class="row justify-content-between align-items-center">
+          <!-- header logo  -->
+          <div class="col-4 col-lg-3">
+            <a href="/"><img src="/images/uniqlo-logo.webp" alt="" /></a>
+          </div>
+          <!-- nav menu for desktop  -->
+          <div class="col-lg-6 d-none d-lg-block">
+            <ul class="nav-link">
+              <li><a href="/">Shop</a></li>
+              <li><a href="/About.html">About</a></li>
+              <li><a href="/blog.html">Blog</a></li>
+              <li><a href="/contact.html">Contact</a></li>
+            </ul>
+          </div>
+
+          <div
+            class="col-8 col-lg-3 d-flex justify-content-end align-items-center flex-wrap nav_icon_box"
+          >
+            <!-- Search icon  -->
+            <i
+              class="icon fa-solid fa-magnifying-glass"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            ></i>
+            <!-- Search modal  -->
+            <div
+              class="modal fade"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog" style="margin-top: 260px">
+                <div class="modal-content">
+                  <div class="modal-body search-box">
+                    <input type="text" placeholder="Search your need..." />
+                    <i class="search-icon fa-solid fa-magnifying-glass"></i>
+                  </div>
+
+                  <div class="modal-footer">
+                    <h5>Shopping upto 1000 TAKA, GET FREE DELIVERY</h5>
+                  </div>
                 </div>
-                <!-- nav menu for desktop  -->
-                <div class="col-lg-6 d-none d-lg-block">
-                    <ul class="nav-link">
-                        <li><a href="/">Shop</a></li>
-                        <li><a href="/About.html">About</a></li>
-                        <li><a href="/blog.html">Blog</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
-                    </ul>
-                </div>
-
-                <div
-                  class="col-8 col-lg-3 d-flex justify-content-end align-items-center flex-wrap nav_icon_box"
-                >
-
-                    <!-- Search icon  -->
-                    <i
-                      class="icon fa-solid fa-magnifying-glass"
-                      data-bs-toggle="modal"
-                      data-bs-target="#exampleModal"
-                    ></i>
-                    <!-- Search modal  -->
-                    <div
-                      class="modal fade"
-                      id="exampleModal"
-                      tabindex="-1"
-                      aria-labelledby="exampleModalLabel"
-                      aria-hidden="true"
-                    >
-                          <div class="modal-dialog" style="margin-top: 260px">
-                              <div class="modal-content">
-                                
-                                  <div class="modal-body search-box">
-                                      <input type="text" placeholder="Search your need..." />
-                                      <i class="search-icon fa-solid fa-magnifying-glass"></i>
-                                  </div>
-
-                                  <div class="modal-footer">
-                                      <h5>Shopping upto 1000 TAKA, GET FREE DELIVERY</h5>
-                                  </div>
-
-                              </div>
-                          </div>
-                    </div>
-
-                    <!-- user icon -->
-                    <i class="icon fa-solid fa-user user-nav-icon">
-                        <ul class="user-nav-list">
-                            <!-- user menu list -->
-                            <li><a href="/">My Account</a></li>
-                            <li><a href="/">My Order</a></li>
-                            <li><a href="/wishlist.html">Wishlist</a></li>
-                            <li><a href="/login-register.html">Login</a></li>
-                            <li><a href="/">SignOut</a></li>
-                        </ul>
-                    </i>
-
-                    <!-- cart icon -->
-                    <a class="cart-link" href="/cart.html">
-                      <i class="icon shopping-cart fa-solid fa-cart-shopping">
-                      <span class="cart-number">3</span>
-                    </i>
-                    </a>
-
-                    <!-- bar icon -->
-                    <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
-                      <!-- nav menu for mobile device -->
-                        <ul class="toggle-nav d-none">
-                            <li><a href="/">Shop</a></li>
-                            <li><a href="/About.html">About</a></li>
-                            <li><a href="/blog.html">Blog</a></li>
-                            <li><a href="/contact.html">Contact</a></li>
-                        </ul>
-                    </i>
-                </div>
+              </div>
             </div>
-        </nav>
+
+            <!-- user icon -->
+            <i class="icon fa-solid fa-user user-nav-icon">
+              <ul class="user-nav-list">
+                <!-- user menu list -->
+                <li><a href="/">My Account</a></li>
+                <li><a href="/">My Order</a></li>
+                <li><a href="/wishlist.html">Wishlist</a></li>
+                <li><a href="/login-register.html">Login</a></li>
+                <li><a href="/">SignOut</a></li>
+              </ul>
+            </i>
+
+            <!-- cart icon -->
+            <a class="cart-link" href="/cart.html">
+              <i class="icon shopping-cart fa-solid fa-cart-shopping">
+                <span class="cart-number">3</span>
+              </i>
+            </a>
+
+            <!-- bar icon -->
+            <i class="toggle-nav-icon d-lg-none icon fa-solid fa-bars">
+              <!-- nav menu for mobile device -->
+              <ul class="toggle-nav d-none">
+                <li><a href="/">Shop</a></li>
+                <li><a href="/About.html">About</a></li>
+                <li><a href="/blog.html">Blog</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+              </ul>
+            </i>
+          </div>
+        </div>
+      </nav>
     </header>
     <!------------------------------
     -------header area end--------->
@@ -131,7 +132,7 @@
           <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button
-                class="nav-link active"
+                class="toggle-btn active"
                 id="pills-home-tab"
                 data-bs-toggle="pill"
                 data-bs-target="#pills-home"
@@ -139,13 +140,14 @@
                 role="tab"
                 aria-controls="pills-home"
                 aria-selected="true"
+                autofocus
               >
                 Login
               </button>
             </li>
             <li class="nav-item" role="presentation">
               <button
-                class="nav-link"
+                class="toggle-btn"
                 id="pills-profile-tab"
                 data-bs-toggle="pill"
                 data-bs-target="#pills-profile"
@@ -158,7 +160,7 @@
               </button>
             </li>
           </ul>
-          <div class="tab-content" id="pills-tabContent">
+          <div class="tab-content" id="pills-tabContent" >
             <div
               class="tab-pane fade show active"
               id="pills-home"
@@ -166,29 +168,27 @@
               aria-labelledby="pills-home-tab"
               tabindex="0"
             >
-            <!-- login field -->
+              <!-- login field -->
               <div>
                 <div class="field-login">
-                    <form>
-                        <input type="text">
-                        <input type="password">
-                        <div class="d-flex justify-content-between">
-                            <p>
-                                <input type="checkbox" name="" id=""> Remember Me
-                            </p>
-                            <p> Forget password?</p>
-                        </div>
-                        <input type="button" value="Login">
-                    </form>
+                  <form>
+                    <input  class="filed" type="text" placeholder="User Name/ Email*" required/> <br>
+                    <input class="filed" type="password" placeholder="Password*" required/>
+                    <div class="check-box d-flex justify-content-between mt-3">
+                      <p id="check-2"><input  type="checkbox" name="" id=""  required/> Remember Me</p>
+                      <p style="color:#ff4136; cursor:pointer">Forget password?</p>
+                    </div>
+                    <input class="login-btn" type="button" value="Login" />
+                  </form>
                 </div>
                 <div class="social-login">
-                    <h3>Or Login With</h3>
-                    <div>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-google"></i>
-                    </div>
+                  <h3>Or Login With</h3>
+                  <div>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-google"></i>
+                  </div>
                 </div>
               </div>
             </div>
@@ -199,28 +199,26 @@
               aria-labelledby="pills-profile-tab"
               tabindex="0"
             >
-                            <div>
+              <div>
                 <div class="field-login">
-                    <form>
-                        <input type="text">
-                        <input type="password">
-                        <input type="password">
-                        <div class="d-flex justify-content-between">
-                            <p>
-                                <input type="checkbox" name="" id=""> Remember Me
-                            </p>
-                        </div>
-                        <input type="button" value="Register">
-                    </form>
+                  <form>
+                    <input class="filed" type="text" placeholder="Name*" required/>
+                    <input class="filed" type="password" placeholder="Email*" required/>
+                    <input class="filed" type="password" placeholder="Password*" required />
+                    <div class="check-box d-flex justify-content-between mt-3">
+                      <p id="check-1"><input  type="checkbox" name="" id="" /> Remember Me</p>
+                    </div >
+                    <input class="login-btn" type="button" value="Register" />
+                  </form>
                 </div>
                 <div class="social-login">
-                    <h3>Or Login With</h3>
-                    <div>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-google"></i>
-                    </div>
+                  <h3>Or Login With</h3>
+                  <div>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-google"></i>
+                  </div>
                 </div>
               </div>
             </div>
