--- a/blog.html
+++ b/blog.html
@@ -250,8 +250,8 @@
     <!------------------------------
     ----------post area end-------->
 
-    <!------------------------------
-    ------footer area start-------->
+ <!------------------------------
+  ------footer area start------->
     <footer>
       <div class="container">
         <div class="row">
