--- a/blogDetails.html
+++ b/blogDetails.html
@@ -133,7 +133,7 @@
           <div>
             <a href="/">Home</a>
             <span>/</span>
-            <a href="/blog.html">Blog Details</a>
+            <a href="/blogDetails.html">Blog Details</a>
           </div>
         </div>
       </div>
