--- a/login-register.html
+++ b/login-register.html
@@ -126,7 +126,7 @@
 
     <!------------------------------
     -----login / register start---->
-    <section>
+    <section class="login-regiter-section">
       <div class="container">
         <div class="login_register">
           <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
