--- a/About.html
+++ b/About.html
@@ -133,7 +133,7 @@
           <div>
             <a href="/">Home</a>
             <span>/</span>
-            <a href="/About.html">About</a>
+            <a href="/About.html">About Us</a>
           </div>
         </div>
       </div>
