--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
           <div>
             <a href="/">Home</a>
             <span>/</span>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html">Contact Us</a>
           </div>
         </div>
       </div>
